Fix startup errors and update readme